fix: solve problems with path paramter into routes
