# server/src/interface/routes/students-routes.ts
@@ -4,7 +4,7 @@ import { AuthMiddleware } from "../middlewares/auth.middleware.js";
 
 const studentsRouter = Router();
 
-studentsRouter.get("/get/{accessKey}", (req, res, next) =>
+studentsRouter.get("/get/:accessKey", (req, res, next) =>
   studentsController.getStudentByKeyData(req, res, next)
 );
 
@@ -17,19 +17,19 @@ studentsRouter.get("/search", AuthMiddleware.authenticate, (req, res, next) =>
 );
 
 studentsRouter.get(
-  "/{studentId}",
+  "/:studentId",
   AuthMiddleware.authenticate,
   (req, res, next) => studentsController.getStudentData(req, res, next)
 );
 
 studentsRouter.put(
-  "/{studentId}",
+  "/:studentId",
   AuthMiddleware.authenticate,
   (req, res, next) => studentsController.updateStudentData(req, res, next)
 );
 
 studentsRouter.delete(
-  "/{studentId}",
+  "/:studentId",
   AuthMiddleware.authenticate,
   (req, res, next) => studentsController.deleteStudent(req, res, next)
 );
